# stamp2vec

./: .gitignore  API_DESIGN.txt  API_DOC.md  Dockerfile  README.md  dataset.py  export.py  generate_dataset.py  main.py  pyproject.toml  run.bat  run.sh  train.py  verify.py
config/: api_config.json
exported/seal_pkg_v1/: config.json  manifest.json
models/seal_pkg_v1/: config.json  manifest.json
scripts/: init_milvus.py  init_model.py
seal_embedding_api/: __init__.py  config_loader.py  logger_config.py  main.py  models.py
seal_embedding_api/api/: __init__.py  health.py  pipeline.py
seal_embedding_api/core/: detection_service.py  embedding_service.py  milvus_service.py  seal_model.py  similarity_service.py  storage.py
tests/api/: test_api.py
tests/integration/: test_integration.py
tests/specs/: api.md  integration.md  unit.md
tests/unit/: test_detection_service.py  test_models.py
train/: __init__.py  detect.py  export.py  model.py  train.py  verify.py
