[project]
name = "stamp-cmp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "modelscope>=1.33.0",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "timm>=1.0.24",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "trdg>=0.1.1",
]
