[project]
name = "stamp-cmp"
version = "0.1.0"
description = "A deep learning-based stamp detection, recognition, and comparison toolkit with OCR text extraction and vector retrieval capabilities, providing FastAPI RESTful interfaces"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi<=0.128.0",
    "opencv-python<=4.13.0",
    "paddleocr<3.3.0",
    "paddlepaddle<=3.2.2",
    "pymilvus[milvus_lite]<=2.6.8",
    "pytest<=9.0.2",
    "timm<=1.0.24",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "uvicorn<=0.40.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }